# charles_mesh

./: CMakeLists.txt  README.md  basic_type.cpp  basic_type.h  build.sh  charles_bvh.cpp  charles_bvh.h  charles_cgal.h  charles_cgal_test.cpp  charles_mesh.cpp  charles_mesh.h  charles_mesh_test.cpp  draw_mesh_test.cpp  mesh_factory.cpp  mesh_factory.h  mesh_processing_starter.cpp  mesh_processing_visualization_tool.cpp  mesh_processing_visualization_tool.h  mesh_type.h  mesh_type_test.cpp  mesh_viewer_starter.cpp  print_tools.cpp  print_tools.h  quadric_error_metrics.cpp  quadric_error_metrics.h  simple_math.h  unit_test.cpp  unit_test.h  viewer_middle_layer.cpp  viewer_middle_layer.h
